# commander

./: .gitignore  .pylintrc  LICENSE  README.md  _config.yml  commands.txt  device_executer.py  execute_many.py  execute_one.py  main.py  output.txt  pyproject.toml
NetworkCommander/: __init__.py  config.py  deploy.py  device.py  device_executer.py  device_list.py  init.py  keepass.py  main.py  printing.py  recruit_device.py
commander/: __init__.py  deploy.py  device.py  device_executer.py  device_list.py  global_variables.py  init.py  keepass.py  main.py  recruit_device.py
devices/: r1.json  r2.json  r3.json
docs/: Connectivity.md  README.md
network-commander/: __init__.py  init.py  main.py  recruit_device.py
networkcommander/: commander_logging.py  config.py  deploy.py  device.py  device_executer.py  init.py  io_tools.py  io_utils.py  keepass.py  main.py  utils.py
outputs/: r1.json  r2.json  r3.json
src/: deploy.py  device.py  device_list.py  get_devices.py  global_variables.py  init.py  recruit_device.py
test/: logging_for_testing.py  mocks.py  test_device.py  test_e2e_init.py  test_init.py  test_keepass.py  test_keepass_e2e.py
