[tool.poetry]
name = "NetworkCommander"
version = "0.1.3a1"
description = "cli scraping tools for network devices "
authors = ["Ido Don <76511079+Ido-Don@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = { extras = ["all"], version = "^0.9.0" }
netmiko = "^4.3.0"
pykeepass = "^4.0.6"
pydantic = "^2.5.3"
inquirer = "^3.1.4"


[tool.poetry.scripts]
commander = "NetworkCommander.main:app"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
