[tool.poetry]
name = "NetworkCommander"
version = "0.4.7"
description = "cli scraping tools for network devices "
authors = ["Ido Don <76511079+Ido-Don@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
typer = { extras = ["all"], version = "^0.9.0" }
netmiko = "^4.3.0"
pykeepass = "^4.0.6"


[tool.poetry.scripts]
commander = "networkcommander.main:app"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
pylint = "^3.0.3"
pyfakefs = "^5.5.0"
pytest = "^8.2.2"
faker = "^25.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
